# Balsa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  pyproject.toml
Data/: training_data_100_points_7_features.ds
Documentation/: BalsaFileFormat-1.0.0.txt  BalsaFileFormat.txt  BalsaManual.md  Manual.md
Examples/: CMakeLists.txt  example1_basicclassify.cpp  generateclassifymeasure.sh  trainingexample.cpp
Paper/: paper.bib  paper.md
Sources/: CMakeLists.txt  balsa.h  balsa_classify.cpp  balsa_convert.cpp  balsa_dataproc.cpp  balsa_featureimportance.cpp  balsa_generate.cpp  balsa_measure.cpp  balsa_merge.cpp  balsa_metrics.cpp  balsa_print.cpp  balsa_test.cpp  balsa_train.cpp  classifier.cpp  classifier.h  classifierfilestream.h  classifierstream.h  classifiervisitor.h  config.h.in  csvparser.h  datagenerator.h  datamodel.h  datarepresentation.h  datatools.h  datatypes.h  decisiontreeclassifier.h  decisiontreeclassifierstream.h  decisiontrees.cpp  decisiontrees.h  ensembleclassifier.h  exceptions.h  featureimportance.h  fileio.cpp  fileio.h  genericparser.h  indexeddecisiontree.h  ingestion.cpp  ingestion.h  iteratortools.h  messagequeue.h  (+20 more)
Test/classifiert/: __init__.py  __main__.py  app.py  datagen.py  report.py  util.py
Test/classifiert/data/: lightgbm-test.py  lightgbm-train.py  sklearn-test.py  sklearn-train.py
Test/classifiert/runners/: __init__.py  jigsaw.py  lightgbm.py  ranger.py  sklearn.py
Tools/: convert_json_training_data_set.py
Tools/classifiert/: __main__.py  app.py  config.py  data.py  datagen.py  report.py  util.py
Tools/classifiert/data/: sklearn-test.py  sklearn-train.py
Tools/classifiert/drivers/: __init__.py  balsa.py  lightgbm.py  ranger.py  sklearn.py
Tools/classifiert/runners/: __init__.py  balsa.py  jigsaw.py
Tools/classifiert/scripts/: lightgbm-test.py  lightgbm-train.py  sklearn-test.py  sklearn-train.py
core/: .clang-format  CMakeLists.txt  README.md
core/Examples/: CMakeLists.txt  classificationexample.cpp  customcontainerexample.cpp  trainingexample.cpp
core/Paper/: paper.md
core/Sources/: CMakeLists.txt  balsa.h  balsa_classify.cpp  balsa_convert.cpp  balsa_measure.cpp  classifierfilestream.h  classifiervisitor.h  datagenerator.h  datatypes.h  decisiontreeclassifier.h  ensembleclassifier.h  fileio.cpp  genericparser.h  indexeddecisiontree.h  iteratortools.h  modelevaluation.cpp  randomforesttrainer.h  serdes.h  weightedcoin.h
python/: .clang-format  CMakeLists.txt  README.md  pyproject.toml
python/src/balsa/: __init__.py
rfcperf/scripts/: lightgbm-train.py  sklearn-test.py
src/: balsamodule.cpp
src/balsa/: __init__.py
tools/: README.md
tools/rfcperf/: README.md  __main__.py  app.py  config.py  data.py  report.py  util.py
tools/rfcperf/drivers/: __init__.py  balsa.py  lightgbm.py
tools/rfcperf/scripts/: lightgbm-test.py
