[build-system]
requires = ["scikit-build-core>=0.5", "numpy>=1.25"]
build-backend = "scikit_build_core.build"

[project]
name = "balsa_rfc"
dynamic = ["version"]
dependencies = [
  "numpy>=1.25"
]
requires-python = ">=3.9"
description = "A Python package for fast, memory-efficient, random forest classification"
license = {file = "../LICENSE"}
classifiers = [
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: BSD License",
	"Operating System :: POSIX",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: Unix",
	"Programming Language :: C",
	"Programming Language :: C++",
	"Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/SRON-Eath/Balsa"
Documentation = "https://github.com/SRON-Eath/Balsa/blob/main/README.md"
Repository = "https://github.com/SRON-Eath/Balsa"
Issues = "https://github.com/SRON-Eath/Balsa/issues"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/balsa_rfc/__init__.py"
